# hackathon-l2g

./: README.md  app.py  learn2rank.py  main.py  model.py  pyproject.toml  utils.py
checkpoints/: model_fold0.pt  model_fold1.pt
notebooks/: Pycaret_Baseline_testing.ipynb  credible_set_exploration.ipynb  learn2rank.ipynb  set_inputs.py
