[project]
name = "hackathon-l2g"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.6.0",
    "mlflow>=3.5.0",
    "pandas>=2.3.3",
    "streamlit>=1.50.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]
